--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -32,7 +32,7 @@
         "* fast convergence\n",
         "* undemanding for RAM - fullHD/4K and above\n",
         "* saving/loading FFT snapshots to resume processing\n",
-        "* selectable CLIP model\n"
+        "* various CLIP models (including multi-language from [SBERT](https://sbert.net))\n"
       ]
     },
     {
@@ -101,6 +101,7 @@
         "# from skimage import exposure\n",
         "from base64 import b64encode\n",
         "import shutil\n",
+        "import moviepy, moviepy.editor\n",
         "\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -120,6 +121,8 @@
         "\n",
         "!pip install git+https://github.com/openai/CLIP.git\n",
         "import clip\n",
+        "!pip install sentence_transformers\n",
+        "from sentence_transformers import SentenceTransformer\n",
         "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\n",
         "import pytorch_ssim as ssim\n",
         "\n",
@@ -154,8 +157,6 @@
         "    imageio.imsave(fname, np.array(img))\n",
         "    imageio.imsave('result.jpg', np.array(img))\n",
         "\n",
-        "import moviepy, moviepy.editor\n",
-        "\n",
         "def makevid(seq_dir, size=None):\n",
         "  # out_sequence = seq_dir + '/%05d.jpg'\n",
         "  out_video = seq_dir + '.mp4'\n",
@@ -180,8 +181,14 @@
       "source": [
         "#@title Upload text file\n",
         "\n",
+        "#@markdown For non-English languages mark one of:\n",
+        "\n",
+        "multilang = False #@param {type:\"boolean\"}\n",
         "translate = False #@param {type:\"boolean\"}\n",
-        "uploaded = files.upload()"
+        "uploaded = files.upload()\n",
+        "\n",
+        "#@markdown (`multilang` = multi-language CLIP model, \n",
+        "#@markdown `translate` = Google translation)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -192,6 +199,7 @@
         "id": "f3Sj0fxmtw6K"
       },
       "source": [
+        "### Settings\n",
         "Set the desired video resolution and `duration` (in sec).  \n",
         "Select CLIP `model` (results do vary!). I prefer ViT for consistency.  \n",
         "\n",
@@ -304,8 +312,13 @@
         "    translator = Translator()\n",
         "    txt = translator.translate(txt, dest='en').text\n",
         "    print(' translated to:', txt)\n",
-        "  tx = clip.tokenize(txt).cuda()\n",
-        "  txt_enc = model_clip.encode_text(tx).detach().clone()\n",
+        "  if multilang:\n",
+        "      model_lang = SentenceTransformer('clip-ViT-B-32-multilingual-v1').cuda()\n",
+        "      txt_enc = model_lang.encode([txt], convert_to_tensor=True, show_progress_bar=False).detach().clone()\n",
+        "      del model_lang\n",
+        "  else:\n",
+        "      txt_enc = model_clip.encode_text(clip.tokenize(txt).cuda()).detach().clone()\n",
+        "\n",
         "  out_name = '%03d-%s' % (num+1, txt.translate(str.maketrans(dict.fromkeys(list(\"\\n',—|!?/:;\\\\\"), \"\"))).replace(' ', '_').replace('\"', ''))\n",
         "  tempdir = os.path.join(workdir, out_name)\n",
         "  !rm -rf $tempdir\n",
