multi-language model fix

--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -187,7 +187,7 @@
    "source": [
     "### Settings\n",
     "\n",
-    "Select CLIP visual `model` (results do vary!). I prefer ViT for consistency.  \n",
+	"Select CLIP visual `model` (results do vary!). I prefer ViT for consistency (and it's the only multi-language option).  \n",
     "`overscan` option produces semi-seamlessly tileable texture (when off, it's more centered).  \n",
     "`sync` value adds SSIM loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \n",
     "\n",
@@ -234,6 +234,7 @@
     "diverse = 0. #@param {type:\"number\"}\n",
     "expand = 0. #@param {type:\"number\"}\n",
     "progressive_grow = False #@param {type:\"boolean\"}\n",
+	"if multilang: model = 'ViT-B/32' # sbert model is trained with ViT\n",
     "\n",
     "if len(fine_details) > 0:\n",
     "  samples = int(samples * 0.75)\n",
