--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -201,7 +201,7 @@
       "source": [
         "### Settings\n",
         "Set the desired video resolution and `duration` (in sec).  \n",
-        "Select CLIP `model` (results do vary!). I prefer ViT for consistency.  \n",
+        "Select CLIP `model` (results do vary!). I prefer ViT for consistency (and it's the only multi-language option).  \n",
         "\n",
         "Set `overscan` to produce semi-seamlessly tileable texture (when off, it's more centered).  \n",
         "Try adding `noise_scale` to explore some compositional changes.  \n",
@@ -250,6 +250,7 @@
         "expand = 0. #@param {type:\"number\"}\n",
         "progressive_grow = False #@param {type:\"boolean\"}\n",
         "fps = 25\n",
+        "if multilang: model = 'ViT-B/32' # sbert model is trained with ViT\n",
         "\n",
         "model_clip, _ = clip.load(model)\n",
         "modsize = 288 if model == 'RN50x4' else 224\n",
