--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -150,8 +150,8 @@
     "`invert` the whole criteria, if you want to see \"the totally opposite\".\n",
     "\n",
     "Options for non-English languages (use only one of them!):  \n",
-    "`multilang` = use multi-language model  \n",
-    "`translate` = use Google translate"
+    "`multilang` = use multi-language model, trained with ViT  \n",
+    "`translate` = use Google translate (works with any visual model)"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "source": [
     "### Settings\n",
     "\n",
-	"Select CLIP visual `model` (results do vary!). I prefer ViT for consistency (and it's the only multi-language option).  \n",
+	"Select CLIP visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
     "`overscan` option produces semi-seamlessly tileable texture (when off, it's more centered).  \n",
     "`sync` value adds SSIM loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \n",
     "\n",
