--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -187,8 +187,8 @@
         "translate = False #@param {type:\"boolean\"}\n",
         "uploaded = files.upload()\n",
         "\n",
-        "#@markdown (`multilang` = multi-language CLIP model, \n",
-        "#@markdown `translate` = Google translation)\n"
+        "#@markdown (`multilang` = multi-language CLIP model, trained with ViT, \n",
+        "#@markdown `translate` = Google translation, compatible with any visual model)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -201,7 +201,7 @@
       "source": [
         "### Settings\n",
         "Set the desired video resolution and `duration` (in sec).  \n",
-        "Select CLIP `model` (results do vary!). I prefer ViT for consistency (and it's the only multi-language option).  \n",
+        "Select CLIP visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
         "\n",
         "Set `overscan` to produce semi-seamlessly tileable texture (when off, it's more centered).  \n",
         "Try adding `noise_scale` to explore some compositional changes.  \n",
