params init fix

--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -285,7 +285,7 @@
         "\n",
         "if resume is True:\n",
         "  # print(' resuming from', resumed)\n",
-        "  params, _ = fft_image([1, 3, sideY, sideX], resume = params_pt)\n",
+        "  params, _ = fft_image([1, 3, sideY, sideX], resume = params_pt, sd=1.)\n",
         "  if keep > 0:\n",
         "    params_ema = params[0].detach()\n",
         "  torch.save(params_pt, os.path.join(workdir, '000-start.pt'))\n",
@@ -298,7 +298,9 @@
         "def process(txt, num):\n",
         "\n",
         "  global params_start\n",
-        "  params, image_f = fft_image([1, 3, sideY, sideX], resume='init.pt')\n",
+        "  sd = 0.01\n",
+        "  if keep > 0: sd = keep + (1-keep) * sd\n",
+        "  params, image_f = fft_image([1, 3, sideY, sideX], resume='init.pt', sd=sd)\n",
         "  image_f = to_valid_rgb(image_f)\n",
         "  \n",
         "  if progressive_grow is True:\n",
@@ -392,7 +394,7 @@
         "  params1 = read_pt(ptfiles[px])\n",
         "  params2 = read_pt(ptfiles[(px+1) % len(ptfiles)])\n",
         "\n",
-        "  params, image_f = fft_image([1, 3, sideY, sideX], resume=params1)\n",
+        "  params, image_f = fft_image([1, 3, sideY, sideX], resume=params1, sd=1.)\n",
         "  image_f = to_valid_rgb(image_f)\n",
         "\n",
         "  for i in range(vsteps):\n",
