--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -240,6 +240,7 @@
         "keep = 0. #@param {type:\"number\"}\n",
         "noise_scale = 0. #@param {type:\"number\"}\n",
         "contrast = 1. #@param {type:\"number\"}\n",
+		"colors = 1.23 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
@@ -301,7 +302,7 @@
         "  sd = 0.01\n",
         "  if keep > 0: sd = keep + (1-keep) * sd\n",
         "  params, image_f = fft_image([1, 3, sideY, sideX], resume='init.pt', sd=sd)\n",
-        "  image_f = to_valid_rgb(image_f)\n",
+        "  image_f = to_valid_rgb(image_f, colors = colors)\n",
         "  \n",
         "  if progressive_grow is True:\n",
         "    lr1 = learning_rate * 2\n",
@@ -395,7 +396,7 @@
         "  params2 = read_pt(ptfiles[(px+1) % len(ptfiles)])\n",
         "\n",
         "  params, image_f = fft_image([1, 3, sideY, sideX], resume=params1, sd=1.)\n",
-        "  image_f = to_valid_rgb(image_f)\n",
+        "  image_f = to_valid_rgb(image_f, colors = colors)\n",
         "\n",
         "  for i in range(vsteps):\n",
         "    with torch.no_grad():\n",
@@ -421,6 +422,7 @@
         "\n",
         "duration =  12#@param {type:\"integer\"}\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
+		"colors = 1.23 #@param {type:\"number\"}\n",
         "fps = 25\n",
         "\n",
         "text_file = list(uploaded)[0]\n",
@@ -444,7 +446,7 @@
         "  params2 = read_pt(ptfiles[(px+1) % len(ptfiles)])\n",
         "\n",
         "  params, image_f = fft_image(shape, resume=params1)\n",
-        "  image_f = to_valid_rgb(image_f)\n",
+        "  image_f = to_valid_rgb(image_f, colors = colors)\n",
         "\n",
         "  for i in range(vsteps):\n",
         "    with torch.no_grad():\n",
