--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -225,6 +225,7 @@
     "overscan = True #@param {type:\"boolean\"}\n",
     "sync =  0.5 #@param {type:\"number\"}\n",
     "contrast = 1. #@param {type:\"number\"}\n",
+    "colors = 1.23 #@param {type:\"number\"}\n",
     "#@markdown > Training\n",
     "steps = 200 #@param {type:\"integer\"}\n",
     "samples = 200 #@param {type:\"integer\"}\n",
@@ -312,7 +313,7 @@
     "# learning_rate = 1.\n",
     "init_pt = params_pt if resume is True else None\n",
     "params, image_f = param_f(shape, resume=init_pt)\n",
-    "image_f = to_valid_rgb(image_f)\n",
+    "image_f = to_valid_rgb(image_f, colors = colors)\n",
     "\n",
     "if progressive_grow is True:\n",
     "  lr1 = learning_rate * 2\n",
