--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -193,6 +193,7 @@
     "\n",
     "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
     "Setting `steps` much higher (1000-..) will elaborate details and make tones smoother, but may start throwing texts like graffiti.  \n",
+	"Tune `colors` (saturation) and `contrast` if needed.  \n",
     "\n",
     "Other tricks:  \n",
     "`diverse` boosts compositional & contextual variety (difference between simultaneous samples). good start is  ~0.2; can be negative.  \n",
@@ -224,8 +225,8 @@
     "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
     "overscan = True #@param {type:\"boolean\"}\n",
     "sync =  0.5 #@param {type:\"number\"}\n",
-    "contrast = 1. #@param {type:\"number\"}\n",
     "colors = 1.23 #@param {type:\"number\"}\n",
+    "contrast = 1. #@param {type:\"number\"}\n",
     "#@markdown > Training\n",
     "steps = 200 #@param {type:\"integer\"}\n",
     "samples = 200 #@param {type:\"integer\"}\n",
