--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -207,7 +207,8 @@
         "Try adding `noise_scale` to explore some compositional changes.  \n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
         "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \n",
-        "`show_freq` controls preview frequency (doesn't affect the results; one can set it higher to speed up process). \n",
+        "`show_freq` controls preview frequency (doesn't affect the results; one can set it higher to speed up process).  \n",
+        "Tune `colors` (saturation) and `contrast` if needed. \n",
         "\n",
         "Other tricks:  \n",
         "`diverse` boosts compositional & contextual variety (difference between simultaneous samples). good start is  ~0.2; can be negative.  \n",
@@ -239,8 +240,8 @@
         "overscan = False #@param {type:\"boolean\"}\n",
         "keep = 0. #@param {type:\"number\"}\n",
         "noise_scale = 0. #@param {type:\"number\"}\n",
-        "contrast = 1. #@param {type:\"number\"}\n",
 		"colors = 1.23 #@param {type:\"number\"}\n",
+        "contrast = 1. #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
