--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -93,12 +93,10 @@
         "import io\n",
         "import time\n",
         "import math\n",
-        "# from math import exp\n",
         "import random\n",
         "import imageio\n",
         "import numpy as np\n",
         "import PIL\n",
-        "# from skimage import exposure\n",
         "from base64 import b64encode\n",
         "import shutil\n",
         "import moviepy, moviepy.editor\n",
@@ -113,7 +111,6 @@
         "from IPython.core.interactiveshell import InteractiveShell\n",
         "InteractiveShell.ast_node_interactivity = \"all\"\n",
         "import ipywidgets as ipy\n",
-        "# import glob\n",
         "from google.colab import output, files\n",
         "\n",
         "import warnings\n",
@@ -131,7 +128,7 @@
         "!git clone https://github.com/eps696/aphantasia\n",
         "%cd aphantasia/\n",
         "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\n",
-        "from utils import pad_up_to, basename, file_list, img_list, img_read\n",
+        "from utils import pad_up_to, basename, file_list, img_list, img_read, txt_clean, plot_text\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
         "clear_output()\n",
@@ -141,13 +138,14 @@
         "  resumed = files.upload()\n",
         "  params_pt = list(resumed.values())[0]\n",
         "  params_pt = torch.load(io.BytesIO(params_pt))\n",
+        "  if isinstance(params_pt, list): params_pt = params_pt[0]\n",
         "\n",
         "def read_pt(file):\n",
         "  return torch.load(file).cuda()\n",
         "\n",
         "def ema(base, next, step):\n",
-        "    scale_ma = 1. / (step + 1)\n",
-        "    return next * scale_ma + base * (1.- scale_ma)\n",
+        "  scale_ma = 1. / (step + 1)\n",
+        "  return next * scale_ma + base * (1.- scale_ma)\n",
         "\n",
         "def save_img(img, fname=None):\n",
         "  img = np.array(img)[:,:,:]\n",
@@ -204,15 +202,15 @@
         "Select CLIP visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
         "\n",
         "Set `overscan` to produce semi-seamlessly tileable texture (when off, it's more centered).  \n",
-        "Try adding `noise_scale` to explore some compositional changes.  \n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
         "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \n",
         "`show_freq` controls preview frequency (doesn't affect the results; one can set it higher to speed up process).  \n",
-        "Tune `colors` (saturation) and `contrast` if needed. \n",
+        "Tune `decay` (softness), `colors` (saturation) and `contrast` if needed.  \n",
+        "Try adding `noise_scale` to explore some compositional changes.  \n",
         "\n",
         "Other tricks:  \n",
-        "`diverse` boosts compositional & contextual variety (difference between simultaneous samples). good start is  ~0.2; can be negative.  \n",
-        "`expand` boosts training steps in general (difference between consequent samples).  good start is  ~0.2.   \n",
+        "`no_text X` tries to remove \"graffiti\" by subtracting plotted text prompt. good start is \\~0.1.   \n",
+        "`enhance` boosts training consistency (of simultaneous samples) and steps progress. good start is 0.1~0.2.  \n",
         "`progressive_grow` may boost macro forms creation (especially with lower `learning_rate`), see more [here](https://github.com/eps696/aphantasia/issues/2).   \n",
         "\n",
         "`--keep X` parameter controls how well the next line/image generation follows the previous. By default X = 0, and every frame is produced independently (i.e. randomly initiated). \n",
@@ -239,18 +237,22 @@
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "overscan = False #@param {type:\"boolean\"}\n",
         "keep = 0. #@param {type:\"number\"}\n",
+        "#@markdown > Look\n",
+        "decay = 1.4 #@param {type:\"number\"}\n",
+        "colors = 1.3 #@param {type:\"number\"}\n",
+        "contrast = 1.1 #@param {type:\"number\"}\n",
         "noise_scale = 0. #@param {type:\"number\"}\n",
-		"colors = 1.23 #@param {type:\"number\"}\n",
-        "contrast = 1. #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
         "learning_rate = .05 #@param {type:\"number\"}\n",
         "show_freq = 10 #@param {type:\"integer\"}\n",
         "#@markdown > Tricks\n",
-        "diverse = 0. #@param {type:\"number\"}\n",
-        "expand = 0. #@param {type:\"number\"}\n",
+        "no_text = 0. #@param {type:\"number\"}\n",
+        "enhance = 0. #@param {type:\"number\"}\n",
         "progressive_grow = False #@param {type:\"boolean\"}\n",
+        "diverse = -enhance\n",
+        "expand = abs(enhance)\n",
         "fps = 25\n",
         "if multilang: model = 'ViT-B/32' # sbert model is trained with ViT\n",
         "\n",
@@ -287,7 +289,8 @@
         "\n",
         "if resume is True:\n",
         "  # print(' resuming from', resumed)\n",
-        "  params, _ = fft_image([1, 3, sideY, sideX], resume = params_pt, sd=1.)\n",
+        "  # params, _ = fft_image([1, 3, sideY, sideX], resume = params_pt, sd=1.)\n",
+        "  params_start = params_pt.cuda()\n",
         "  if keep > 0:\n",
         "    params_ema = params[0].detach()\n",
         "  torch.save(params_pt, os.path.join(workdir, '000-start.pt'))\n",
@@ -302,7 +305,7 @@
         "  global params_start\n",
         "  sd = 0.01\n",
         "  if keep > 0: sd = keep + (1-keep) * sd\n",
-        "  params, image_f = fft_image([1, 3, sideY, sideX], resume='init.pt', sd=sd)\n",
+        "  params, image_f = fft_image([1, 3, sideY, sideX], resume='init.pt', sd=sd, decay_power=decay)\n",
         "  image_f = to_valid_rgb(image_f, colors = colors)\n",
         "  \n",
         "  if progressive_grow is True:\n",
@@ -323,8 +326,12 @@
         "      del model_lang\n",
         "  else:\n",
         "      txt_enc = model_clip.encode_text(clip.tokenize(txt).cuda()).detach().clone()\n",
+        "  if no_text > 0:\n",
+        "      txt_plot = torch.from_numpy(plot_text(txt, modsize)/255.).unsqueeze(0).permute(0,3,1,2).cuda()\n",
+        "      txt_plot_enc = model_clip.encode_image(txt_plot).detach().clone()\n",
+        "  else: txt_plot_enc = None\n",
         "\n",
-        "  out_name = '%03d-%s' % (num+1, txt.translate(str.maketrans(dict.fromkeys(list(\"\\n',—|!?/:;\\\\\"), \"\"))).replace(' ', '_').replace('\"', ''))\n",
+        "  out_name = '%03d-%s' % (num+1, txt_clean(txt))\n",
         "  tempdir = os.path.join(workdir, out_name)\n",
         "  !rm -rf $tempdir\n",
         "  os.makedirs(tempdir, exist_ok=True)\n",
@@ -339,6 +346,8 @@
         "    imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=None)\n",
         "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "    loss -= torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
+        "    if no_text > 0:\n",
+        "        loss += no_text * torch.cosine_similarity(txt_plot_enc, out_enc, dim=-1).mean()\n",
         "    if diverse != 0:\n",
         "      imgs_sliced = slice_imgs([image_f(noise)], samples, modsize, norm_in, overscan=overscan, micro=None)\n",
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
@@ -396,7 +405,7 @@
         "  params1 = read_pt(ptfiles[px])\n",
         "  params2 = read_pt(ptfiles[(px+1) % len(ptfiles)])\n",
         "\n",
-        "  params, image_f = fft_image([1, 3, sideY, sideX], resume=params1, sd=1.)\n",
+        "  params, image_f = fft_image([1, 3, sideY, sideX], resume=params1, sd=1., decay_power=decay)\n",
         "  image_f = to_valid_rgb(image_f, colors = colors)\n",
         "\n",
         "  for i in range(vsteps):\n",
@@ -423,7 +432,7 @@
         "\n",
         "duration =  12#@param {type:\"integer\"}\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
-		"colors = 1.23 #@param {type:\"number\"}\n",
+        "colors = 1.3 #@param {type:\"number\"}\n",
         "fps = 25\n",
         "\n",
         "text_file = list(uploaded)[0]\n",
