--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -164,7 +164,7 @@
         "class latents(torch.nn.Module):\n",
         "    def __init__(self, shape):\n",
         "        super(latents, self).__init__()\n",
-        "        init_rnd = torch.zeros(shape).normal_(0.,3.)\n",
+        "        init_rnd = torch.zeros(shape).normal_(0.,4.)\n",
         "        self.lats = torch.nn.Parameter(init_rnd.cuda())\n",
         "    def forward(self):\n",
         "        return self.lats # [1,256, h//16, w//16]\n",
@@ -292,8 +292,8 @@
         "        emb = model_clip.encode_text(clip.tokenize(txt).cuda())\n",
         "    return emb.detach().clone()\n",
         "\n",
-        "if diverse != 0:\n",
-        "  samples = int(samples * 0.5)\n",
+        "# if diverse != 0:\n",
+        "#  samples = int(samples * 0.5)\n",
         "        \n",
         "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
         "sign = 1. if invert is True else -1.\n",
@@ -302,7 +302,7 @@
         "  in_img = list(uploaded.values())[0]\n",
         "  print(' image:', list(uploaded)[0])\n",
         "  img_in = torch.from_numpy(imageio.imread(in_img).astype(np.float32)/255.).unsqueeze(0).permute(0,3,1,2).cuda()[:,:3,:,:]\n",
-        "  in_sliced = slice_imgs([img_in], samples, modsize, transform=norm_in, micro=False)[0]\n",
+        "  in_sliced = slice_imgs([img_in], samples, modsize, transform=norm_in)[0]\n",
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
         "    overscan = True\n",
@@ -366,10 +366,10 @@
         "  loss = 0\n",
         "  img_out = vqgan_image(model_vqgan, lats())\n",
         "\n",
-        "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=False)\n",
+        "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan)\n",
         "  out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "#  if diverse != 0:\n",
-        "#    imgs_sliced = slice_imgs([vqgan_image(model_vqgan, lats())], samples, modsize, norm_in, overscan=overscan, micro=False)\n",
+        "#    imgs_sliced = slice_imgs([vqgan_image(model_vqgan, lats())], samples, modsize, norm_in, overscan=overscan)\n",
         "#    out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "#    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "#    del out_enc2; torch.cuda.empty_cache()\n",
