--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -212,7 +212,7 @@
       "source": [
         "### Settings\n",
         "\n",
-        "Select CLIP visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
+        "Select visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
         "`overscan` option produces semi-seamlessly tileable texture (when off, it's more centered).  \n",
         "`sync` value adds SSIM loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \n",
         "\n",
@@ -247,7 +247,7 @@
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "overscan = True #@param {type:\"boolean\"}\n",
-        "sync =  0.5 #@param {type:\"number\"}\n",
+        "sync =  0.2 #@param {type:\"number\"}\n",
         "#@markdown > Look\n",
         "decay = 1.5 #@param {type:\"number\"}\n",
         "colors = 1.3 #@param {type:\"number\"}\n",
