--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -338,8 +338,8 @@
         "# init_pt = params_pt if resume is True else None\n",
         "# params, image_f = fft_image(shape, resume=init_pt, decay_power=decay)\n",
         "\n",
-        "config_vqgan = load_config(\"models_TT/model-%d.yaml\" % VQGAN_size, display=False)\n",
-        "model_vqgan = load_vqgan(config_vqgan, ckpt_path=\"models_TT/last-%d.ckpt\" % VQGAN_size).cuda()\n",
+        "config_vqgan = load_config(\"models_TT/model-%d.yaml\" % int(VQGAN_size), display=False)\n",
+        "model_vqgan = load_vqgan(config_vqgan, ckpt_path=\"models_TT/last-%d.ckpt\" % int(VQGAN_size)).cuda()\n",
         "\n",
         "shape = [1, 256, sideY//16, sideX//16]\n",
         "lats = latents(shape).cuda()\n",
