--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -235,10 +235,6 @@
       "source": [
         "#@title Generate\n",
         "\n",
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/GDrive')\n",
-        "# clipsDir = '/content/GDrive/MyDrive/T2I ' + dtNow.strftime(\"%Y-%m-%d %H%M\")\n",
-        "\n",
         "!rm -rf $tempdir\n",
         "os.makedirs(tempdir, exist_ok=True)\n",
         "\n",
@@ -246,7 +242,7 @@
         "sideY = 720 #@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
-        "overscan = True #@param {type:\"boolean\"}\n",
+        "overscan = False #@param {type:\"boolean\"}\n",
         "sync =  0.2 #@param {type:\"number\"}\n",
         "#@markdown > Look\n",
         "decay = 1.5 #@param {type:\"number\"}\n",
@@ -310,7 +306,7 @@
         "  del in_sliced; torch.cuda.empty_cache()\n",
         "\n",
         "if len(text) > 0:\n",
-        "  print(' macro:', text)\n",
+        "  print(' main text:', text)\n",
         "  if translate:\n",
         "    translator = Translator()\n",
         "    text = translator.translate(text, dest='en').text\n",
