--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -126,11 +126,18 @@
         "import yaml\n",
         "from omegaconf import OmegaConf\n",
         "from taming.models.vqgan import VQModel\n",
-        "!mkdir -p models_TT\n",
-        "!wget 'https://heibox.uni-heidelberg.de/f/140747ba53464f49b476/?dl=1' -O 'models_TT/last-1024.ckpt' \n",
-        "!wget 'https://heibox.uni-heidelberg.de/f/6ecf2af6c658432c8298/?dl=1' -O 'models_TT/model-1024.yaml' \n",
-        "!wget 'https://heibox.uni-heidelberg.de/f/867b05fc8c4841768640/?dl=1' -O 'models_TT/last-16384.ckpt' \n",
-        "!wget 'https://heibox.uni-heidelberg.de/f/274fb24ed38341bfa753/?dl=1' -O 'models_TT/model-16384.yaml' \n",
+        "\n",
+        "if not os.path.isdir('/content/models_TT'):\n",
+        "  !mkdir -p /content/models_TT\n",
+        "def getm(url, path):\n",
+        "  if os.path.isfile(path) and os.stat(path).st_size > 0: \n",
+        "    print(' already exists', path, os.stat(path).st_size)\n",
+        "  else:\n",
+        "    !wget $url -O $path\n",
+        "getm('https://heibox.uni-heidelberg.de/f/140747ba53464f49b476/?dl=1', '/content/models_TT/last-1024.ckpt')\n",
+        "getm('https://heibox.uni-heidelberg.de/f/6ecf2af6c658432c8298/?dl=1', '/content/models_TT/model-1024.yaml')\n",
+        "getm('https://heibox.uni-heidelberg.de/f/867b05fc8c4841768640/?dl=1', '/content/models_TT/last-16384.ckpt')\n",
+        "getm('https://heibox.uni-heidelberg.de/f/274fb24ed38341bfa753/?dl=1', '/content/models_TT/model-16384.yaml')\n",
         "\n",
         "workdir = '_out'\n",
         "tempdir = os.path.join(workdir, 'ttt')\n",
@@ -259,7 +266,7 @@
         "overscan = False #@param {type:\"boolean\"}\n",
         "sync =  0.3 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
-        "steps = 298 #@param {type:\"integer\"}\n",
+        "steps = 300 #@param {type:\"integer\"}\n",
         "samples = 32 #@param {type:\"integer\"}\n",
         "learning_rate = 0.1 #@param {type:\"number\"}\n",
         "save_freq = 1 #@param {type:\"integer\"}\n",
@@ -335,11 +342,8 @@
         "\n",
         "if multilang is True: del model_lang\n",
         "\n",
-        "# init_pt = params_pt if resume is True else None\n",
-        "# params, image_f = fft_image(shape, resume=init_pt, decay_power=decay)\n",
-        "\n",
-        "config_vqgan = load_config(\"models_TT/model-%d.yaml\" % int(VQGAN_size), display=False)\n",
-        "model_vqgan = load_vqgan(config_vqgan, ckpt_path=\"models_TT/last-%d.ckpt\" % int(VQGAN_size)).cuda()\n",
+        "config_vqgan = load_config(\"/content/models_TT/model-%d.yaml\" % int(VQGAN_size), display=False)\n",
+        "model_vqgan = load_vqgan(config_vqgan, ckpt_path=\"/content/models_TT/last-%d.ckpt\" % int(VQGAN_size)).cuda()\n",
         "\n",
         "shape = [1, 256, sideY//16, sideX//16]\n",
         "lats = latents(shape).cuda()\n",
