--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -190,7 +190,7 @@
         "\n",
         "text = \"\" #@param {type:\"string\"}\n",
         "fine_details = \"\" #@param {type:\"string\"}\n",
-        "subtract = \"watermark\" #@param {type:\"string\"}\n",
+        "subtract = \"\" #@param {type:\"string\"}\n",
         "multilang = False #@param {type:\"boolean\"}\n",
         "translate = False #@param {type:\"boolean\"}\n",
         "invert = False #@param {type:\"boolean\"}\n",
