--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -42,7 +42,7 @@
         "## Features \n",
         "* complex requests:\n",
         "  * image and/or text as main prompts  \n",
-        "   (composition similarity controlled with [SSIM](https://github.com/Po-Hsun-Su/pytorch-ssim) loss)\n",
+        "   (composition similarity controlled with [LPIPS](https://github.com/richzhang/PerceptualSimilarity) loss)\n",
         "  * additional text prompts for fine details and to subtract (avoid) topics\n",
         "  * criteria inversion (show \"the opposite\")\n",
         "\n",
@@ -125,8 +125,8 @@
         "import clip\n",
         "!pip install sentence_transformers\n",
         "from sentence_transformers import SentenceTransformer\n",
-        "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\n",
-        "import pytorch_ssim as ssim\n",
+        "!pip install lpips\n",
+        "import lpips\n",
         "\n",
         "%cd /content\n",
         "!rm -rf aphantasia\n",
@@ -182,8 +182,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "JUvpdy8BWGuM"
+        "id": "JUvpdy8BWGuM",
+        "cellView": "form"
       },
       "source": [
         "#@title Input\n",
@@ -214,7 +214,7 @@
         "\n",
         "Select visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
         "`overscan` option produces semi-seamlessly tileable texture (when off, it's more centered).  \n",
-        "`sync` value adds SSIM loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \n",
+        "`sync` value adds LPIPS loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \n",
         "\n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
         "Setting `steps` much higher (1000-..) will elaborate details and make tones smoother, but may start throwing texts like graffiti.  \n",
@@ -243,7 +243,7 @@
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "overscan = False #@param {type:\"boolean\"}\n",
-        "sync =  0.2 #@param {type:\"number\"}\n",
+        "sync =  0.25 #@param {type:\"number\"}\n",
         "#@markdown > Look\n",
         "decay = 1.5 #@param {type:\"number\"}\n",
         "colors = 1.3 #@param {type:\"number\"}\n",
@@ -285,6 +285,8 @@
         "\n",
         "if diverse != 0:\n",
         "  samples = int(samples * 0.5)\n",
+        "if sync > 0:\n",
+        "  samples = int(samples * 0.6)\n",
         "        \n",
         "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
         "sign = 1. if invert is True else -1.\n",
@@ -297,9 +299,9 @@
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
         "    overscan = True\n",
-        "    ssim_loss = ssim.SSIM(window_size = 11)\n",
-        "    ssim_size = [sideY//8, sideX//8]\n",
-        "    img_in = F.interpolate(img_in, ssim_size).float()\n",
+        "    sim_loss = lpips.LPIPS(net='vgg').cuda()\n",
+        "    sim_size = [sideY//2, sideX//2]\n",
+        "    img_in = F.interpolate(img_in, sim_size).float()\n",
         "    # img_in = F.interpolate(img_in, (sideY, sideX)).float()\n",
         "  else:\n",
         "    del img_in\n",
@@ -384,7 +386,7 @@
         "  if len(subtract) > 0: # subtract text\n",
         "      loss += -sign * torch.cosine_similarity(txt_enc0, out_enc, dim=-1).mean()\n",
         "  if sync > 0 and upload_image: # image composition sync\n",
-        "      loss -= sync * ssim_loss(F.interpolate(img_out, ssim_size).float(), img_in)\n",
+        "      loss += sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in).squeeze()\n",
         "  if len(fine_details) > 0: # input text for micro details\n",
         "      imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=True)\n",
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
