--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -243,7 +243,7 @@
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "overscan = False #@param {type:\"boolean\"}\n",
-        "sync =  0.25 #@param {type:\"number\"}\n",
+        "sync =  0.4 #@param {type:\"number\"}\n",
         "#@markdown > Look\n",
         "decay = 1.5 #@param {type:\"number\"}\n",
         "colors = 1.3 #@param {type:\"number\"}\n",
@@ -299,7 +299,7 @@
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
         "    overscan = True\n",
-        "    sim_loss = lpips.LPIPS(net='vgg').cuda()\n",
+        "    sim_loss = lpips.LPIPS(net='vgg', verbose=False).cuda()\n",
         "    sim_size = [sideY//2, sideX//2]\n",
         "    img_in = F.interpolate(img_in, sim_size).float()\n",
         "    # img_in = F.interpolate(img_in, (sideY, sideX)).float()\n",
@@ -359,6 +359,8 @@
         "def checkout(num):\n",
         "  with torch.no_grad():\n",
         "    img = image_f(contrast=contrast).cpu().numpy()[0]\n",
+        "    if sync > 0 and upload_image:\n",
+        "      img = img **1.5 # empirical tone mapping\n",
         "  save_img(img, os.path.join(tempdir, '%04d.jpg' % num))\n",
         "  outpic.clear_output()\n",
         "  with outpic:\n",
@@ -386,7 +388,8 @@
         "  if len(subtract) > 0: # subtract text\n",
         "      loss += -sign * torch.cosine_similarity(txt_enc0, out_enc, dim=-1).mean()\n",
         "  if sync > 0 and upload_image: # image composition sync\n",
-        "      loss += sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in).squeeze()\n",
+        "      prog_sync = (steps - i) / steps \n",
+        "      loss += prog_sync * sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in, normalize=True).squeeze()\n",
         "  if len(fine_details) > 0: # input text for micro details\n",
         "      imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=True)\n",
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
