lpips color fix

--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -241,7 +241,7 @@
         "Select CLIP visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
         "Select `VQGAN_size` - it also changes the result (I prefer codebook `1024`, despite it's smaller than `16384`).  \n",
         "`overscan` option produces more uniform composition (when off, it's more centered).  \n",
-        "`sync` value adds SSIM loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \n",
+        "`sync` value adds LPIPS loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \n",
         "\n",
         "Decrease `samples` if you face OOM.  \n"
       ]
@@ -264,7 +264,7 @@
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "VQGAN_size = 1024 #@param [1024, 16384]\n",
         "overscan = False #@param {type:\"boolean\"}\n",
-        "sync =  0.3 #@param {type:\"number\"}\n",
+        "sync =  0.4 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 300 #@param {type:\"integer\"}\n",
         "samples = 32 #@param {type:\"integer\"}\n",
@@ -313,9 +313,9 @@
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
         "    overscan = True\n",
-        "    ssim_loss = ssim.SSIM(window_size = 11)\n",
-        "    ssim_size = [sideY//4, sideX//4]\n",
-        "    img_in = F.interpolate(img_in, ssim_size).float()\n",
+        "    sim_loss = lpips.LPIPS(net='vgg', verbose=False).cuda()\n",
+        "    sim_size = [sideY//2, sideX//2]\n",
+        "    img_in = F.interpolate(img_in, sim_size).float()\n",
         "    # img_in = F.interpolate(img_in, (sideY, sideX)).float()\n",
         "  else:\n",
         "    del img_in\n",
@@ -386,7 +386,8 @@
         "  if len(subtract) > 0: # subtract text\n",
         "      loss += -sign * 0.5 * torch.cosine_similarity(txt_enc0, out_enc, dim=-1).mean()\n",
         "  if sync > 0 and upload_image: # image composition sync\n",
-        "      loss -= sync * ssim_loss(F.interpolate(img_out, ssim_size).float(), img_in)\n",
+        "      prog_sync = (steps - i) / steps \n",
+        "      loss += prog_sync * sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in, normalize=True).squeeze()\n",
         "#  if expand > 0:\n",
         "#    global prev_enc\n",
         "#    if i > 0:\n",
