lpips color fix

--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -106,8 +106,8 @@
         "import clip\n",
         "!pip install sentence_transformers\n",
         "from sentence_transformers import SentenceTransformer\n",
-        "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\n",
-        "import pytorch_ssim as ssim\n",
+        "!pip install lpips\n",
+        "import lpips\n",
         "\n",
         "%cd /content\n",
         "!rm -rf aphantasia\n",
