--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -281,6 +281,10 @@
         "\n",
         "if len(subtract) > 0:\n",
         "  samples = int(samples * 0.75)\n",
+        "if sync > 0 and upload_image:\n",
+        "  samples = int(samples * 0.5)\n",
+        "# if diverse != 0:\n",
+        "#  samples = int(samples * 0.5)\n",
         "print(' using %d samples' % samples)\n",
         "\n",
         "model_clip, _ = clip.load(model)\n",
@@ -299,8 +303,6 @@
         "        emb = model_clip.encode_text(clip.tokenize(txt).cuda())\n",
         "    return emb.detach().clone()\n",
         "\n",
-        "# if diverse != 0:\n",
-        "#  samples = int(samples * 0.5)\n",
         "        \n",
         "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
         "sign = 1. if invert is True else -1.\n",
@@ -314,7 +316,7 @@
         "  if sync > 0:\n",
         "    overscan = True\n",
         "    sim_loss = lpips.LPIPS(net='vgg', verbose=False).cuda()\n",
-        "    sim_size = [sideY//2, sideX//2]\n",
+        "    sim_size = [sideY//4, sideX//4]\n",
         "    img_in = F.interpolate(img_in, sim_size).float()\n",
         "    # img_in = F.interpolate(img_in, (sideY, sideX)).float()\n",
         "  else:\n",
