--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -241,7 +241,8 @@
         "Select CLIP visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
         "Select `VQGAN_size` - it also changes the result (I prefer codebook `1024`, despite it's smaller than `16384`).  \n",
         "`overscan` option produces more uniform composition (when off, it's more centered).  \n",
-        "`sync` value adds LPIPS loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \n",
+        "`sync` value adds LPIPS loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity.  \n",
+        "`--macro X` (from 0 to 1) endorses bigger forms (less disperse composition). should not be too close to 1.  \n",
         "\n",
         "Decrease `samples` if you face OOM.  \n"
       ]
@@ -271,9 +272,10 @@
         "learning_rate = 0.1 #@param {type:\"number\"}\n",
         "save_freq = 1 #@param {type:\"integer\"}\n",
         "\n",
-        "# #@markdown > Tricks\n",
+        "#@markdown > Tricks\n",
         "# no_text = 0.07 #@param {type:\"number\"}\n",
         "# enhance = 0. #@param {type:\"number\"}\n",
+        "macro = 0. #@param {type:\"number\"}\n",
         "# diverse = -enhance\n",
         "# expand = abs(enhance)\n",
         "\n",
@@ -372,10 +374,10 @@
         "  loss = 0\n",
         "  img_out = vqgan_image(model_vqgan, lats())\n",
         "\n",
-        "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan)\n",
+        "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=1-macro)\n",
         "  out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "#  if diverse != 0:\n",
-        "#    imgs_sliced = slice_imgs([vqgan_image(model_vqgan, lats())], samples, modsize, norm_in, overscan=overscan)\n",
+        "#    imgs_sliced = slice_imgs([vqgan_image(model_vqgan, lats())], samples, modsize, norm_in, overscan=overscan, micro=1-macro)\n",
         "#    out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "#    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "#    del out_enc2; torch.cuda.empty_cache()\n",
