--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -223,7 +223,8 @@
         "Other tricks:  \n",
         "`no_text X` tries to remove \"graffiti\" by subtracting plotted text prompt    \n",
         "`enhance` boosts training consistency (of simultaneous samples) and steps progress. good start is 0.1~0.2.  \n",
-        "`progressive_grow` may boost macro forms creation (especially with lower `learning_rate`), read more [here](https://github.com/eps696/aphantasia/issues/2).  "
+        "`--macro X` (from 0 to 1) endorses bigger forms (less disperse composition). should not be too close to 1.  \n",
+        "`progressive_grow` may also boost bigger forms creation (especially with lower `learning_rate`); read more [here](https://github.com/eps696/aphantasia/issues/2).  "
       ]
     },
     {
@@ -256,6 +257,7 @@
         "#@markdown > Tricks\n",
         "no_text = 0.07 #@param {type:\"number\"}\n",
         "enhance = 0. #@param {type:\"number\"}\n",
+        "macro = 0. #@param {type:\"number\"}\n",
         "progressive_grow = False #@param {type:\"boolean\"}\n",
         "if multilang: model = 'ViT-B/32' # sbert model is trained with ViT\n",
         "diverse = -enhance\n",
@@ -371,7 +373,7 @@
         "  loss = 0\n",
         "  img_out = image_f()\n",
         "\n",
-        "  micro = False if len(fine_details) > 0 else None\n",
+        "  micro = False if len(fine_details) > 0 else 1-macro\n",
         "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=micro)\n",
         "  out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "  if diverse != 0:\n",
