--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -211,7 +211,8 @@
         "Other tricks:  \n",
         "`no_text X` tries to remove \"graffiti\" by subtracting plotted text prompt. good start is \\~0.1.   \n",
         "`enhance` boosts training consistency (of simultaneous samples) and steps progress. good start is 0.1~0.2.  \n",
-        "`progressive_grow` may boost macro forms creation (especially with lower `learning_rate`), see more [here](https://github.com/eps696/aphantasia/issues/2).   \n",
+        "`--macro X` (from 0 to 1) endorses bigger forms (less disperse composition). should not be too close to 1.  \n",
+        "`progressive_grow` may also boost bigger forms creation (especially with lower `learning_rate`), see more [here](https://github.com/eps696/aphantasia/issues/2).   \n",
         "\n",
         "`--keep X` parameter controls how well the next line/image generation follows the previous. By default X = 0, and every frame is produced independently (i.e. randomly initiated). \n",
         "Setting it higher starts each generation closer to the average of previous runs, effectively keeping macro compositions more similar and the transitions smoother. Safe values are < 0.5 (higher numbers may cause the imagery getting stuck). This behaviour depends on the input, so test with your prompts and see what's better in your case."
@@ -250,6 +251,7 @@
         "#@markdown > Tricks\n",
         "no_text = 0. #@param {type:\"number\"}\n",
         "enhance = 0. #@param {type:\"number\"}\n",
+        "macro = 0. #@param {type:\"number\"}\n",
         "progressive_grow = False #@param {type:\"boolean\"}\n",
         "diverse = -enhance\n",
         "expand = abs(enhance)\n",
@@ -343,7 +345,7 @@
         "    noise = noise_scale * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if noise_scale > 0 else 0.\n",
         "    img_out = image_f(noise)\n",
         "\n",
-        "    imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=None)\n",
+        "    imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=1-macro)\n",
         "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "    loss -= torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
         "    if no_text > 0:\n",
