--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -287,7 +287,7 @@
         "\n",
         "if diverse != 0:\n",
         "  samples = int(samples * 0.5)\n",
-        "if sync > 0:\n",
+        "if sync > 0 and upload_image:\n",
         "  samples = int(samples * 0.6)\n",
         "        \n",
         "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
