--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -240,7 +240,7 @@
         "\n",
         "Select CLIP visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
         "Select `VQGAN_size` - it also changes the result (I prefer codebook `1024`, despite it's smaller than `16384`).  \n",
-        "`overscan` option produces more uniform composition (when off, it's more centered).  \n",
+        "`align` option is about composition. `uniform` is maybe the most stable, `overscan` makes semi-seamless tileable texture.  \n",
         "`sync` value adds LPIPS loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity.  \n",
         "`--macro X` (from 0 to 1) endorses bigger forms (less disperse composition). should not be too close to 1.  \n",
         "\n",
@@ -264,7 +264,7 @@
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "VQGAN_size = 1024 #@param [1024, 16384]\n",
-        "overscan = False #@param {type:\"boolean\"}\n",
+        "align = 'uniform' #@param ['central', 'uniform', 'overscan']\n",
         "sync =  0.4 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 300 #@param {type:\"integer\"}\n",
@@ -316,7 +316,7 @@
         "  in_sliced = slice_imgs([img_in], samples, modsize, transform=norm_in)[0]\n",
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
-        "    overscan = True\n",
+        "    align = 'overscan'\n",
         "    sim_loss = lpips.LPIPS(net='vgg', verbose=False).cuda()\n",
         "    sim_size = [sideY//4, sideX//4]\n",
         "    img_in = F.interpolate(img_in, sim_size).float()\n",
@@ -374,10 +374,10 @@
         "  loss = 0\n",
         "  img_out = vqgan_image(model_vqgan, lats())\n",
         "\n",
-        "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=1-macro)\n",
+        "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, align, micro=1-macro)\n",
         "  out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "#  if diverse != 0:\n",
-        "#    imgs_sliced = slice_imgs([vqgan_image(model_vqgan, lats())], samples, modsize, norm_in, overscan=overscan, micro=1-macro)\n",
+        "#    imgs_sliced = slice_imgs([vqgan_image(model_vqgan, lats())], samples, modsize, norm_in, align, micro=1-macro)\n",
         "#    out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "#    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "#    del out_enc2; torch.cuda.empty_cache()\n",
