--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -201,7 +201,7 @@
         "Set the desired video resolution and `duration` (in sec).  \n",
         "Select CLIP visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
         "\n",
-        "Set `overscan` to produce semi-seamlessly tileable texture (when off, it's more centered).  \n",
+        "`align` option is about composition. `uniform` is maybe the most stable, `overscan` makes semi-seamless tileable texture.  \n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
         "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \n",
         "`show_freq` controls preview frequency (doesn't affect the results; one can set it higher to speed up process).  \n",
@@ -236,7 +236,7 @@
         "duration =  60#@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
-        "overscan = False #@param {type:\"boolean\"}\n",
+        "align = 'uniform' #@param ['central', 'uniform', 'overscan']\n",
         "keep = 0. #@param {type:\"number\"}\n",
         "#@markdown > Look\n",
         "decay = 1.5 #@param {type:\"number\"}\n",
@@ -345,13 +345,13 @@
         "    noise = noise_scale * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if noise_scale > 0 else 0.\n",
         "    img_out = image_f(noise)\n",
         "\n",
-        "    imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=1-macro)\n",
+        "    imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, align, micro=1-macro)\n",
         "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "    loss -= torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
         "    if no_text > 0:\n",
         "        loss += no_text * torch.cosine_similarity(txt_plot_enc, out_enc, dim=-1).mean()\n",
         "    if diverse != 0:\n",
-        "      imgs_sliced = slice_imgs([image_f(noise)], samples, modsize, norm_in, overscan=overscan, micro=None)\n",
+        "      imgs_sliced = slice_imgs([image_f(noise)], samples, modsize, norm_in, align, micro=None)\n",
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "      loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "      del out_enc2; torch.cuda.empty_cache()\n",
