--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -213,7 +213,7 @@
         "### Settings\n",
         "\n",
         "Select visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
-        "`overscan` option produces semi-seamlessly tileable texture (when off, it's more centered).  \n",
+        "`align` option is about composition. `uniform` is maybe the most stable, `overscan` makes semi-seamless tileable texture.  \n",
         "`sync` value adds LPIPS loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \n",
         "\n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
@@ -243,7 +243,7 @@
         "sideY = 720 #@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
-        "overscan = False #@param {type:\"boolean\"}\n",
+        "align = 'uniform' #@param ['central', 'uniform', 'overscan']\n",
         "sync =  0.4 #@param {type:\"number\"}\n",
         "#@markdown > Look\n",
         "decay = 1.5 #@param {type:\"number\"}\n",
@@ -297,10 +297,10 @@
         "  in_img = list(uploaded.values())[0]\n",
         "  print(' image:', list(uploaded)[0])\n",
         "  img_in = torch.from_numpy(imageio.imread(in_img).astype(np.float32)/255.).unsqueeze(0).permute(0,3,1,2).cuda()[:,:3,:,:]\n",
-        "  in_sliced = slice_imgs([img_in], samples, modsize, transform=norm_in)[0]\n",
+        "  in_sliced = slice_imgs([img_in], samples, modsize, norm_in)[0]\n",
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
-        "    overscan = True\n",
+        "    align = 'overscan'\n",
         "    sim_loss = lpips.LPIPS(net='vgg', verbose=False).cuda()\n",
         "    sim_size = [sideY//4, sideX//4]\n",
         "    img_in = F.interpolate(img_in, sim_size).float()\n",
@@ -374,10 +374,10 @@
         "  img_out = image_f()\n",
         "\n",
         "  micro = False if len(fine_details) > 0 else 1-macro\n",
-        "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=micro)\n",
+        "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, align, micro=micro)\n",
         "  out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "  if diverse != 0:\n",
-        "    imgs_sliced = slice_imgs([image_f()], samples, modsize, norm_in, overscan=overscan, micro=micro)\n",
+        "    imgs_sliced = slice_imgs([image_f()], samples, modsize, norm_in, align, micro=micro)\n",
         "    out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "    del out_enc2; torch.cuda.empty_cache()\n",
@@ -393,7 +393,7 @@
         "      prog_sync = (steps - i) / steps \n",
         "      loss += prog_sync * sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in, normalize=True).squeeze()\n",
         "  if len(fine_details) > 0: # input text for micro details\n",
-        "      imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=True)\n",
+        "      imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, align, micro=True)\n",
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "      loss += sign * torch.cosine_similarity(txt_enc2, out_enc2, dim=-1).mean()\n",
         "      del out_enc2; torch.cuda.empty_cache()\n",
