--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -218,7 +218,7 @@
         "\n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
         "Setting `steps` much higher (1000-..) will elaborate details and make tones smoother, but may start throwing texts like graffiti.  \n",
-        "Tune `decay` (softness), `colors` (saturation) and `contrast` if needed.  \n",
+        "Tune `decay` (compositional softness) and `sharpness`, `colors` (saturation) and `contrast` as needed.  \n",
         "\n",
         "Other tricks:  \n",
         "`no_text X` tries to remove \"graffiti\" by subtracting plotted text prompt    \n",
@@ -247,8 +247,9 @@
         "sync =  0.4 #@param {type:\"number\"}\n",
         "#@markdown > Look\n",
         "decay = 1.5 #@param {type:\"number\"}\n",
-        "colors = 1.3 #@param {type:\"number\"}\n",
-        "contrast = 1.1 #@param {type:\"number\"}\n",
+        "colors = 1.5 #@param {type:\"number\"}\n",
+        "contrast = 0.9 #@param {type:\"number\"}\n",
+        "sharpness = 0.3 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
@@ -361,8 +362,8 @@
         "def checkout(num):\n",
         "  with torch.no_grad():\n",
         "    img = image_f(contrast=contrast).cpu().numpy()[0]\n",
-        "    if sync > 0 and upload_image:\n",
-        "      img = img **1.5 # empirical tone mapping\n",
+        "    if (sync > 0 and upload_image) or sharpness != 0:\n",
+        "      img = img **1.3 # empirical tone mapping\n",
         "  save_img(img, os.path.join(tempdir, '%04d.jpg' % num))\n",
         "  outpic.clear_output()\n",
         "  with outpic:\n",
@@ -372,6 +373,11 @@
         "def train(i):\n",
         "  loss = 0\n",
         "  img_out = image_f()\n",
+        "\n",
+        "  if sharpness != 0:\n",
+        "    lx = torch.mean(torch.abs(img_out[0,:,:,1:] - img_out[0,:,:,:-1]))\n",
+        "    ly = torch.mean(torch.abs(img_out[0,:,1:,:] - img_out[0,:,:-1,:]))\n",
+        "    loss -= sharpness * (ly+lx)\n",
         "\n",
         "  micro = False if len(fine_details) > 0 else 1-macro\n",
         "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, align, micro=micro)\n",
