--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -120,8 +120,8 @@
         "import clip\n",
         "!pip install sentence_transformers\n",
         "from sentence_transformers import SentenceTransformer\n",
-        "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\n",
-        "import pytorch_ssim as ssim\n",
+        "!pip install lpips\n",
+        "import lpips\n",
         "\n",
         "%cd /content\n",
         "!rm -rf aphantasia\n",
@@ -205,7 +205,7 @@
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
         "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \n",
         "`show_freq` controls preview frequency (doesn't affect the results; one can set it higher to speed up process).  \n",
-        "Tune `decay` (softness), `colors` (saturation) and `contrast` if needed.  \n",
+        "Tune `decay` (compositional softness) and `sharpness`, `colors` (saturation) and `contrast` as needed.  \n",
         "Try adding `noise_scale` to explore some compositional changes.  \n",
         "\n",
         "Other tricks:  \n",
@@ -240,8 +240,9 @@
         "keep = 0. #@param {type:\"number\"}\n",
         "#@markdown > Look\n",
         "decay = 1.5 #@param {type:\"number\"}\n",
-        "colors = 1.3 #@param {type:\"number\"}\n",
-        "contrast = 1.1 #@param {type:\"number\"}\n",
+        "colors = 1.5 #@param {type:\"number\"}\n",
+        "contrast =  0.9#@param {type:\"number\"}\n",
+        "sharpness = 0.3 #@param {type:\"number\"}\n",
         "noise_scale = 0. #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
@@ -345,6 +346,11 @@
         "    noise = noise_scale * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if noise_scale > 0 else 0.\n",
         "    img_out = image_f(noise)\n",
         "\n",
+        "    if sharpness != 0:\n",
+        "      lx = torch.mean(torch.abs(img_out[0,:,:,1:] - img_out[0,:,:,:-1]))\n",
+        "      ly = torch.mean(torch.abs(img_out[0,:,1:,:] - img_out[0,:,:-1,:]))\n",
+        "      loss -= sharpness * (ly+lx)\n",
+        "\n",
         "    imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, align, micro=1-macro)\n",
         "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "    loss -= torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
@@ -374,6 +380,8 @@
         "    if i % show_freq == 0:\n",
         "      with torch.no_grad():\n",
         "        img = image_f(contrast=contrast).cpu().numpy()[0]\n",
+        "      if sharpness != 0:\n",
+        "        img = img **1.3 # empirical tone mapping\n",
         "      save_img(img, os.path.join(tempdir, '%05d.jpg' % (i // show_freq)))\n",
         "      outpic.clear_output()\n",
         "      with outpic:\n",
