transforms and fixes

--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -120,6 +120,8 @@
         "import clip\n",
         "!pip install sentence_transformers\n",
         "from sentence_transformers import SentenceTransformer\n",
+        "!pip install kornia\n",
+        "import kornia\n",
         "!pip install lpips\n",
         "import lpips\n",
         "\n",
@@ -129,6 +131,7 @@
         "%cd aphantasia/\n",
         "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\n",
         "from utils import pad_up_to, basename, file_list, img_list, img_read, txt_clean, plot_text\n",
+        "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
         "clear_output()\n",
@@ -268,7 +271,12 @@
         "if diverse != 0:\n",
         "  samples = int(samples * 0.5)\n",
         "        \n",
-        "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
+        "# norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
+        "if transform is True:\n",
+        "  trform_f = transforms.transforms_custom  \n",
+        "  samples = int(samples * 0.95)\n",
+        "else:\n",
+        "  trform_f = transforms.normalize()\n",
         "\n",
         "text_file = list(uploaded)[0]\n",
         "texts = list(uploaded.values())[0].decode().split('\\n')\n",
@@ -351,13 +359,13 @@
         "      ly = torch.mean(torch.abs(img_out[0,:,1:,:] - img_out[0,:,:-1,:]))\n",
         "      loss -= sharpness * (ly+lx)\n",
         "\n",
-        "    imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, align, micro=1-macro)\n",
+        "    imgs_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=1-macro)\n",
         "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "    loss -= torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
         "    if no_text > 0:\n",
         "        loss += no_text * torch.cosine_similarity(txt_plot_enc, out_enc, dim=-1).mean()\n",
         "    if diverse != 0:\n",
-        "      imgs_sliced = slice_imgs([image_f(noise)], samples, modsize, norm_in, align, micro=None)\n",
+        "      imgs_sliced = slice_imgs([image_f(noise)], samples, modsize, trform_f, align, micro=1-macro)\n",
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "      loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "      del out_enc2; torch.cuda.empty_cache()\n",
