--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -125,6 +125,8 @@
         "import clip\n",
         "!pip install sentence_transformers\n",
         "from sentence_transformers import SentenceTransformer\n",
+        "!pip install kornia\n",
+        "import kornia\n",
         "!pip install lpips\n",
         "import lpips\n",
         "\n",
@@ -134,6 +136,7 @@
         "%cd aphantasia/\n",
         "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\n",
         "from utils import pad_up_to, basename, img_list, img_read, plot_text\n",
+        "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
         "workdir = '_out'\n",
@@ -250,6 +253,7 @@
         "colors = 1.5 #@param {type:\"number\"}\n",
         "contrast = 0.9 #@param {type:\"number\"}\n",
         "sharpness = 0.3 #@param {type:\"number\"}\n",
+        "transform = False\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
@@ -291,14 +295,19 @@
         "if sync > 0 and upload_image:\n",
         "  samples = int(samples * 0.6)\n",
         "        \n",
-        "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
         "sign = 1. if invert is True else -1.\n",
+        "# norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
+        "if transform is True:\n",
+        "  trform_f = transforms.transforms_custom  \n",
+        "  samples = int(samples * 0.95)\n",
+        "else:\n",
+        "  trform_f = transforms.normalize()\n",
         "\n",
         "if upload_image:\n",
         "  in_img = list(uploaded.values())[0]\n",
         "  print(' image:', list(uploaded)[0])\n",
         "  img_in = torch.from_numpy(imageio.imread(in_img).astype(np.float32)/255.).unsqueeze(0).permute(0,3,1,2).cuda()[:,:3,:,:]\n",
-        "  in_sliced = slice_imgs([img_in], samples, modsize, norm_in)[0]\n",
+        "  in_sliced = slice_imgs([img_in], samples, modsize, transforms.normalize(), align, micro=False)[0]\n",
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
         "    align = 'overscan'\n",
@@ -380,10 +389,10 @@
         "    loss -= sharpness * (ly+lx)\n",
         "\n",
         "  micro = False if len(fine_details) > 0 else 1-macro\n",
-        "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, align, micro=micro)\n",
+        "  imgs_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=micro)\n",
         "  out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "  if diverse != 0:\n",
-        "    imgs_sliced = slice_imgs([image_f()], samples, modsize, norm_in, align, micro=micro)\n",
+        "    imgs_sliced = slice_imgs([image_f()], samples, modsize, trform_f, align, micro=micro)\n",
         "    out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "    del out_enc2; torch.cuda.empty_cache()\n",
@@ -399,7 +408,7 @@
         "      prog_sync = (steps - i) / steps \n",
         "      loss += prog_sync * sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in, normalize=True).squeeze()\n",
         "  if len(fine_details) > 0: # input text for micro details\n",
-        "      imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, align, micro=True)\n",
+        "      imgs_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=True)\n",
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "      loss += sign * torch.cosine_similarity(txt_enc2, out_enc2, dim=-1).mean()\n",
         "      del out_enc2; torch.cuda.empty_cache()\n",
